styles/style-portfolio.css
@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat&display=swap');

:root {
    --cor-primaria: #6482AD;
    --cor-secundaria: #F5EDED;
    --cor-terciaria: #7FA1C3;
    --cor-hover: #E2DAD6;

    --fonte-principal: 'Krona One', sans-serif;
    --fonte-secundaria: 'Montserrat', sans-serif;
}

* {
    margin: 0px;
    padding: 0px;
}

body {
    background-color: var(--cor-primaria);
    color: var(--cor-secundaria);
    box-sizing: border-box;
}

.cabecalho {
    padding: 2% 0% 2% 15%;
    background-color: var(--cor-hover);
}

.cabecalho__menu {
    display: flex;
    gap: 80px;
}

.cabecalho__menu__link {
    font-family: var(--fonte-secundaria);
    font-weight: 600;
    font-size: 1.5rem;
    text-decoration: none;
    color: var(--cor-terciaria);
}

.apresentacao {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 5% 15%;
    width: 70%;
    gap: 82px;
}

.apresentacao__conteudo {
    width: 50%;
    display: flex;
    flex-direction: column;
    gap: 32px;
}

.apresentacao__imagem {
    width: 50%;
}

.apresentacao__conteudo__titulo {
    font-family: var(--fonte-principal);
    font-size: 2.25rem;
    font-weight: 400;
    font-style: normal;
}

.apresentacao__conteudo__titulo-destaque {
    color: var(--cor-terciaria);
}

.apresentacao__conteudo__texto {
    font-family: var(--fonte-secundaria);
    font-size: 1.5rem;
    font-weight: 400;
    font-style: normal;
}

.apresentacao__conteudo__botoes {
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-direction: column;
    gap: 32px;
}

.apresentacao__conteudo__botoes__subtitulo {
    font-family: var(--fonte-principal);
    font-weight: 400;
    font-size: 1.5rem;
    font-style: normal;
}

.apresentacao__conteudo__botoes__botao {
    display: flex;
    justify-content: center;
    gap: 16px;
    color: var(--cor-secundaria);
    text-decoration: none;
    width: 50%;
    text-align: center;
    border: 2.5px double var(--cor-terciaria);
    padding: 21.5px 0;
    border-radius: 16px;
    font-family: var(--fonte-secundaria);
    font-size: 1.5rem;
    font-weight: 600;
}

.apresentacao__conteudo__botoes__botao:hover {
    background-color: #272727;
    padding: 30px 15px;
}

.rodape {
    color: --cor-primaria;
    background-color: var(--cor-terciaria);
    padding: 24px;
    text-align: center;
    font-size: 1.5rem;
    font-family: var(--fonte-secundaria);
    font-weight: 400;
}

@media(max-width: 1200px) {
    .cabecalho {
        padding: 10%;
    }

    .cabecalho__menu {
        justify-content: center;
    }

    .apresentacao {
        flex-direction: column-reverse;
        padding: 5%;
        gap: 41;
    }

    .apresentacao__conteudo {
        width: 100%;
        /* 'width: 100%;' would work properly as well */
    }

    .apresentacao__imagem {
        width: 75%;
    }

    .rodape {
        text-align: center;
    }
}

